fixed the issue with the back-ground img
After applying the scale on the bg img a small line appeared in the bottom of my header section . What i did to fix it was to move the pseudo element that covers the img 2 px above with pos absolute.

--- a/artist.css
+++ b/artist.css
@@ -1,12 +1,13 @@
 body {
   background-color: #121212;
-  font-family: "Montserrat", sans-serif;
+  font-family: proxima-nova, sans-serif;
   color: rgb(240, 240, 240);
 }
 header {
   background-image: url(https://www.queenonline.com/global/uploads/86.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  transform: scale(1.3);
   z-index: 2;
   height: 40vh;
   position: sticky;
@@ -24,19 +25,19 @@ header::after {
   background: rgb(18, 18, 18);
   background: linear-gradient(
     0deg,
-    rgba(18, 18, 18, 1) 10%,
-    rgba(18, 18, 18, 0.3785889355742297) 100%
+    rgba(18, 18, 18, 1) 47%,
+    rgba(18, 18, 18, 0.5746673669467788) 100%
   );
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   min-height: 15%;
   min-width: 100%;
 }
 
 .h1Artist {
   color: white;
-  font-weight: 800;
-  font-size: 3.5rem;
+  font-weight: 750;
+  font-size: 3.1rem;
 }
 
 i {
@@ -44,24 +45,29 @@ i {
   font-size: 1.2rem;
 }
 div .btn {
-  border-radius: 10rem;
+  border-radius: 9rem;
+  font-size: 0.5rem;
+  font-weight: 600;
+  letter-spacing: 00.05rem;
+  padding-left: 2rem !important;
+  padding-right: 2rem !important;
 }
 div .btn:hover {
   color: white;
   border: none;
   background-color: rgb(29, 185, 84);
 }
-.red {
+/* .red {
   border: solid 1px red;
-}
+} */
 .z1 {
   z-index: 9999;
 }
 span.highlight {
   color: rgb(148, 153, 152);
-  letter-spacing: 0.1rem;
-  font-weight: 600;
-  font-size: 0.8rem;
+  letter-spacing: 0.05rem;
+  font-weight: 750;
+  font-size: 0.5rem;
   position: relative;
 }
 span.highlight:hover {
@@ -70,13 +76,16 @@ span.highlight:hover {
 }
 p.pNumber {
   color: rgb(144, 146, 142);
+  font-size: 0.7rem;
+  font-weight: 600;
+  margin-bottom: 1rem !important;
 }
-.highlight:hover::after {
+.highlight:hover:after {
   content: "";
   position: absolute;
   background-color: rgb(29, 185, 84);
   width: 40%;
-  height: 1px;
+  height: 2px;
   bottom: -2px;
   left: 30%;
 }
@@ -100,4 +109,7 @@ h2.albums {
 }
 .albumImg {
   transition: 0.3s;
+}
+main.mainMarg {
+  margin-top: 5rem;
 }
